<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_margin="@dimen/vertical_activity"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_move"
            android:text="@string/move_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_move_data"
            android:text="@string/move_activity_with_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_call"
            android:text="@string/panggilan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_web"
            android:text="@string/website_ittp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_intent_explicit"
            android:text="@string/intent_explicit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>